# sharrowkin

./: .env  .env.example  .gitignore  .rld_action_test.db  AGENT_IMPROVEMENT_PLAN.md  AGENT_TEST_RESULTS.md  BUG_FIX_PHASE4.md  COMPLETION_REPORT.md  COMPLEX_TEST_RESULTS.md  CONVERSATION_MEMORY_FIX.md  CRITICAL_FIXES_LOG.md  Dockerfile  EVALUATION_VERIFICATION.md  FINAL_AGENT_REPORT.md  FINAL_REPORT.md  FINAL_STATUS.md  FIXES_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PROGRESS.md  MEMORY_FIX_COMPLETE.md  MEMORY_FIX_FINAL.md  MEMORY_LOSS_ISSUE.md  MEMORY_TEST_RESULTS.md  MISSION_COMPLETE.md  OPTIMIZATION_REPORT.md  PHASE_4-7_REPORT.md  PROGRESS_SUMMARY.md  README.md  STABILITY_PLAN.md  STABILITY_TEST_RESULTS.md  UI_IMPROVEMENT_PLAN.md  __init__.py  calculator.py  config.py  coverage.json  index.html  main.py  math_helper.py  pyproject.toml  pytest.ini  (+16 more)
.sharrowkin/: dsm_memory.json  memory_field.json  rld_genes.db  trace_memory.json
agent/: agent_tools.py  checkpoints.py  core.py  event_stream.py  failure_analyzer.py  resilience.py  tool_loop.py  workspace_cache.py
api/: session_registry.py  sessions.py
backend/: .coverage  .env  .env.example  README.md  main.py.backup  migrate_sessions.py  patch_agent.py  pyproject.toml  requirements.txt  sessions.py
benchmarks/: phase1_benchmark.py
config/: __init__.py  settings.py
core/: __init__.py  agent.py  cached_workspace_manager.py  logging_ctx.py  tools.py  (+3 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: README.md
ui/src-tauri/src/: lib.rs  main.rs
(+351 files in other folders)
