[project]
name = "sharrowkin-backend"
version = "0.1.0"
description = "Local FastAPI backend for the Sharrowkin production developer agent."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "absl-py>=2.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
