[package]
name = "sharrowkin-agent"
version = "0.1.2"
description = "AI-powered autonomous coding agent"
authors = ["NARE Labs"]
edition = "2021"

[lib]
name = "sharrowkin_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "sharrowkin-agent"
path = "src/main.rs"
